--- a/SistemaSolicitudesLaDat.Repository/SistemaSolicitudesLaDat.Repository.csproj
+++ b/SistemaSolicitudesLaDat.Repository/SistemaSolicitudesLaDat.Repository.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
     <PackageReference Include="MySql.Data" Version="9.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
