--- a/SistemaSolicitudesLaDat/appsettings.json
+++ b/SistemaSolicitudesLaDat/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sistema_solicitudes_LaDat;User ID=solicitudes_usr;Password=APSW2025_out;"
+    "DefaultConnection": "Server=localhost;Database=sistema_solicitudes_LaDat;User Id=root;Password=admP1;"
 
   },
   "Security": {
