--- a/SistemaSolicitudesLaDat/appsettings.json
+++ b/SistemaSolicitudesLaDat/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sistema_solicitudes_LaDat;User Id=Sebas;Password=Admin123*;"
+    "DefaultConnection": "Server=localhost;Database=sistema_solicitudes_LaDat;User Id=root;Password=admP1;"
   },
   "Security": {
     "EncryptionKey": "dsCNm5YzHL9xV8wPR1aXbKfT2oG3jQ7k"
